--- a/Frontend/src/Flashcard.css
+++ b/Frontend/src/Flashcard.css
@@ -4,6 +4,7 @@
     margin: 20px;
     perspective: 1000px;
     cursor: pointer;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
   }
   
   .flashcard div {
@@ -25,6 +26,7 @@
   
   .flashcard.flipped .back {
     transform: rotateY(0deg);
+    padding: 0 20px;
   }
   
   .front {
